--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -1,4 +1,6 @@
 name: Deploy-Docs
+permissions:         # <-- add
+  contents: write    # allow push back to repo
 on:
   push:
     branches: [main]
