--- a/.github/workflows/build_docs_index.yml
+++ b/.github/workflows/build_docs_index.yml
@@ -1,40 +1,41 @@
 name: Build-Docs-Index
-permissions:         # <-- add
-  contents: write    # allow push back to repo
+permissions:
+  contents: write          # allow the bot to push
+
 on:
-  push:                # regenerate whenever docs change
+  push:
     paths:
-      - 'docs/**.md'
+      - 'docs/**/*.md'
       - '.github/workflows/build_docs_index.yml'
-  workflow_dispatch:   # manual “Run workflow” button
+  workflow_dispatch:       # manual run button
 
 jobs:
   toc:
+    if: github.actor != 'github-actions[bot]'   # skip bot commits
     runs-on: ubuntu-latest
+
     steps:
+      - uses: actions/checkout@v4
 
-    - uses: actions/checkout@v4
+      - name: Re-create docs/_index.md
+        run: |
+          mkdir -p docs
+          idx="docs/_index.md"
+          echo "# Docs overview"           >  "$idx"
+          echo "_Auto-generated $(date +%F)_" >> "$idx"
+          echo                               >> "$idx"
 
-    - name: Re-create docs/_index.md
-      run: |
-        mkdir -p docs
-        index_file="docs/_index.md"
+          for f in $(git ls-files docs/**/*.md | grep -v '_index.md' | sort); do
+            title=$(grep -m1 '^#' "$f" || true | sed 's/^# //')
+            rel=${f#docs/}
+            echo "- [${title:-$rel}](${rel})" >> "$idx"
+          done
 
-        echo "# Docs overview"                         >  "$index_file"
-        echo "Auto-generated on $(date +%F)."         >> "$index_file"
-        echo                                           >> "$index_file"
-
-        # list every .md in docs/ except _index.md, sorted A-Z
-        for f in $(git ls-files docs/*.md | grep -v '_index.md' | sort); do
-          title=$(grep -m1 '^#' "$f" | sed 's/^# //')
-          rel=${f#docs/}
-          echo "- [${title:-${rel}}](${rel})" >> "$index_file"
-        done
-
-    - name: Commit & push if changed
-      run: |
-        git config user.name  "docs-bot"
-        git config user.email "bot@users.noreply.github.com"
-        git add docs/_index.md
-        git diff --cached --quiet || git commit -m "chore: regen docs index"
-        git push
+      - name: Commit & push if changed
+        run: |
+          git config user.name  "docs-bot"
+          git config user.email "bot@users.noreply.github.com"
+          git add docs/_index.md
+          git diff --cached --quiet || { \
+            git commit -m "chore: regen docs index"; \
+            git push; }
