--- a/.github/workflows/weekly_log.yml
+++ b/.github/workflows/weekly_log.yml
@@ -1,27 +1,31 @@
 name: Weekly-Log
+permissions:
+  contents: write
 
 on:
-  schedule: [{ cron: '5 0 * * MON' }]      # every Monday 00:05 UTC
-  workflow_dispatch:                       # manual “Run workflow” button
+  schedule:
+    - cron: '5 0 * * MON'   # every Monday 00:05 UTC
+  workflow_dispatch:
 
 jobs:
   digest:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Build weekly digest
-      run: |
-        file="weekly_update/$(date +%F).md"
-        echo "# Week ending $(date +%F)" > "$file"
-        git log --since='7 days ago' --pretty='* %s (%h)' >> "$file"
+      - name: Build weekly digest
+        run: |
+          mkdir -p weekly_update
+          file="weekly_update/$(date +%F).md"
+          echo "# Week ending $(date +%F)" > "$file"
+          git log --since='7 days ago' --pretty='* %s (%h)' >> "$file"
 
-    - name: Commit & push
-      run: |
-        git config user.name  "github-actions[bot]"
-        git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-        git add weekly_update || true
-        git commit -m "chore: weekly log" || true
-        git push
-
+      - name: Commit & push
+        run: |
+          git config user.name  "log-bot"
+          git config user.email "bot@users.noreply.github.com"
+          git add weekly_update
+          git diff --cached --quiet || { \
+            git commit -m "chore: weekly log"; \
+            git push; }
