--- a/.github/workflows/build_docs_index.yml
+++ b/.github/workflows/build_docs_index.yml
@@ -1,17 +1,17 @@
 name: Build-Docs-Index
 permissions:
-  contents: write          # allow the bot to push
+  contents: write
 
 on:
   push:
     paths:
       - 'docs/**/*.md'
       - '.github/workflows/build_docs_index.yml'
-  workflow_dispatch:       # manual run button
+  workflow_dispatch:
 
 jobs:
   toc:
-    if: github.actor != 'github-actions[bot]'   # skip bot commits
+    if: github.actor != 'github-actions[bot]'      # skip bot commits
     runs-on: ubuntu-latest
 
     steps:
@@ -21,9 +21,9 @@ jobs:
         run: |
           mkdir -p docs
           idx="docs/_index.md"
-          echo "# Docs overview"           >  "$idx"
+          echo "# Docs overview"            >  "$idx"
           echo "_Auto-generated $(date +%F)_" >> "$idx"
-          echo                               >> "$idx"
+          echo                                >> "$idx"
 
           for f in $(git ls-files docs/**/*.md | grep -v '_index.md' | sort); do
             title=$(grep -m1 '^#' "$f" || true | sed 's/^# //')
@@ -36,6 +36,8 @@ jobs:
           git config user.name  "docs-bot"
           git config user.email "bot@users.noreply.github.com"
           git add docs/_index.md
-          git diff --cached --quiet || { \
-            git commit -m "chore: regen docs index"; \
-            git push; }
+          git diff --cached --quiet && exit 0
+
+          git commit -m "chore: regen docs index"
+          git pull --rebase            # <— sync with remote tip
+          git push                     # fast-forward succeeds
