--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,11 @@
 site_name: AI-UX
 repo_url: https://github.com/ozgurgulerx/ai-ux
-theme: material
+theme:
+  name: material
+  palette:
+    primary: indigo
+    accent: light blue
+
 nav:
   - Home: index.md
   - Docs: 
